classDiagram
    class CatalogDbContext {
        +DbSet~Tenant~ Tenants
        #OnModelCreating(ModelBuilder)
    }
    class AppDbContext {
        +DbSet~RoutingRule~ RoutingRules
        +DbSet~NotificationLog~ NotificationLogs
        #OnModelCreating(ModelBuilder)
    }
    class AppDbContextFactory {
        <<IDesignTimeDbContextFactory>>
        +CreateDbContext(args) AppDbContext
    }
    class TenantDbContextFactory {
        -CatalogDbContext _catalog
        -IMemoryCache _cache
        +CreateAsync(tenantId) Task~AppDbContext~
        +InvalidateCache(tenantId)
    }
    class DatabaseProvisioner {
        -IConfiguration _config
        +ProvisionAsync(slug) Task~string~
        +DeprovisionAsync(connStr) Task
    }
    class TenantMigrationRunner {
        <<IHostedService>>
        +StartAsync(ct) Task
    }
    class TenantRepository {
        -CatalogDbContext _catalog
    }
    class RoutingRuleRepository {
        -TenantDbContextFactory _factory
    }
    class NotificationLogRepository {
        -TenantDbContextFactory _factory
    }
    class LogDispatcher {
        +ChannelType = "log"
        +DispatchAsync(request, ct)
    }
    class WebhookDispatcher {
        +ChannelType = "webhook"
        +DispatchAsync(request, ct)
    }
    class DispatcherRegistry {
        -Dictionary~string,INotificationDispatcher~ _map
        +Resolve(channelType)
    }
    class SlidingWindowRateLimiter {
        -ConcurrentDictionary~Guid,Queue~DateTime~~ _windows
        +TryConsume(tenantId, limit)
    }

    TenantRepository ..|> ITenantRepository : implements
    RoutingRuleRepository ..|> IRoutingRuleRepository : implements
    NotificationLogRepository ..|> INotificationLogRepository : implements
    DatabaseProvisioner ..|> IDatabaseProvisioner : implements
    LogDispatcher ..|> INotificationDispatcher : implements
    WebhookDispatcher ..|> INotificationDispatcher : implements
    DispatcherRegistry ..|> IDispatcherRegistry : implements
    SlidingWindowRateLimiter ..|> IRateLimiter : implements

    TenantRepository --> CatalogDbContext
    TenantDbContextFactory --> CatalogDbContext
    RoutingRuleRepository --> TenantDbContextFactory
    NotificationLogRepository --> TenantDbContextFactory
    TenantDbContextFactory ..> AppDbContext : creates
    TenantMigrationRunner --> CatalogDbContext
    TenantMigrationRunner ..> AppDbContext : migrates per tenant
    DispatcherRegistry --> INotificationDispatcher
